[package]
name = "simple-async-pipe"
version = "0.1.0"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["tokio", "async", "pipe"]
repository = "https://github.com/Ekranos/simple-async-pipe"
description = "Aims to provide a simple pipe-like functionality for async code."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.6.1", features = ["full"] }
